--- a/style.css
+++ b/style.css
@@ -9,15 +9,64 @@ html,body{
   height: 100%;
   width: 100%;
 }
+#main {
+  position: relative;
+  z-index: 10;
+}
 
 #page1{
   height: 100vh;
   width: 100%;
   background-color:#EEEEEA;
   position: relative;
+  padding: 0 2vw;
 }
+
 #nav{
-  height: 100px;
   width: 100%;
-  background-color: red;
+  display:flex;
+  align-items: center;
+  position: relative;
+  z-index: 100;
+  justify-content: space-between;
+}
+#nav-2{
+  display: flex;
+  align-items: center;
+  gap: 2vw;
+}
+#nav-2 h4 {
+  padding: 10px 20px;
+  border: 1px solid #0000003c;
+  border-radius: 50px;
+  font-weight: 500;
+  color: #000000bb;
+  transition: all ease 0.5s;
+  position: relative;
+  font-size: 18px;
+  overflow: hidden;
+}
+#nav-2 h4::after{
+  content: "";
+  position:absolute;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  left: 0;
+  bottom: -100%;
+  border-radius: 50%;
+  transition: all ease 0.5s;
+}
+#nav-2 h4:hover::after{
+  bottom: 0;
+  border-radius: 0;
+}
+#nav-2 h4 a{
+  color: #000000bb;
+  text-decoration: none;
+  position: relative;
+  z-index: 9;
+}
+#nav-2 h4:hover a {
+  color: #EEEEEA;
 }
