--- a/style.css
+++ b/style.css
@@ -70,3 +70,18 @@ html,body{
 #nav-2 h4:hover a {
   color: #EEEEEA;
 }
+
+#center {
+  height: 65vh;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  border-bottom: 1px solid #0000003c;
+  padding-bottom: 2.5vw;
+}
+#center h1 {
+  font-size: 8vw;
+  text-align: left;
+  line-height: 8vw;
+}
