--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@ html,body{
   position: relative;
   z-index: 10;
   background-color:#EEEEEA;
-}
+  overflow-x: auto;
+  max-width: 100%;
+  }
 
 #page1{
   min-height: 100vh;
@@ -74,7 +76,7 @@ html,body{
 }
 
 #center {
-  height: 65vh;
+  height: 62vh;
   width: 100%;
   display: flex;
   align-items:center;
@@ -161,4 +163,82 @@ html,body{
     to {
         transform: translate(-20%, 30%);
     }
+}
+.con{
+  white-space: nowrap;
+    display: inline-block;
+    animation-name: move;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+#mvtext::-webkit-scrollbar {
+  display: none;
+}
+
+#mvtext{
+  z-index: 10;
+  position:absolute;
+  white-space: nowrap;
+  overflow-x: auto;
+  max-width: 100%;
+}
+
+#mvtext h1{
+  font-size: 7vw;
+  display: inline-block;
+}
+#icn{
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background-color: #FE320A;
+  display:inline-block;
+  margin: 1vw 2vw;
+}
+@keyframes move {
+  from {
+      transform: translateX(0);
+  }
+
+  to {
+      transform: translateX(-100%);
+  }
+}
+
+#page2 {
+  background-color: #EFEAE3;
+  position: relative;
+}
+
+#page2-bottom {
+  height: 80vh;
+  width: 100%;
+  padding: 2.5vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+
+#page2-bottom h1 {
+  font-size: 2vw;
+  width: 60%;
+  line-height: 2vw;
+}
+
+#bottom-part2 {
+  width: 20%;
+}
+
+#bottom-part2 img {
+  width: 100%;
+  border-radius: 15px;
+}
+
+#bottom-part2 p {
+  font-weight: 200;
+  margin-top: 2vw;
+  font-size: 1vw;
 }
