added image wrapper

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
   * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box; 
 }
 
 html,body{
@@ -11,7 +11,7 @@ html,body{
 
 #main {
   position: relative;
-  z-index: 10;
+
   background-color:#EEEEEA;
   overflow-x: auto;
   max-width: 100%;
@@ -26,7 +26,7 @@ html,body{
   width: 100%;
   background-color:#EEEEEA;
   position: relative;
-  padding: 0 2vw;
+  
 }
 
 #nav{
@@ -34,7 +34,7 @@ html,body{
   display:flex;
   align-items: center;
   position: relative;
-  z-index: 100;
+  z-index: 90;
   justify-content: space-between;
   padding: 10px 35px;
 }
@@ -79,6 +79,9 @@ html,body{
   color: #EEEEEA;
 }
 
+nav h3 {
+  display: none;
+}
 #center {
   height: 62vh;
   width: 100%;
@@ -87,6 +90,7 @@ html,body{
   justify-content: space-between;
   border-bottom: 1px;
   padding-bottom: 2.5vw;
+  padding: 0 2vw;
 }
 #center h1 {
   font-size: 10vw;
@@ -246,6 +250,7 @@ html,body{
   margin-top: 2vw;
   font-size: 1vw;
 }
+
 #page3 {
   min-height: 100vh;
   width: 100%;
@@ -290,8 +295,9 @@ html,body{
 #fixed-image {
   height: 30vw;
   width: 24vw;
+  /* background-color: red; */
   border-radius: 15px;
-  position: relative;
+  position: fixed;
   z-index: 99;
   left: 50%;
   top: 25%;
@@ -300,27 +306,263 @@ html,body{
   background-position: center;
 }
 
-.featured_header {
-  font-size: 25px;
-  grid-column-gap: 0.5em;
-  grid-row-gap: 0.5em;
-  flex-direction: row;
-  align-items: center;
-  margin-left: 2em;
-  margin-right: 2em;
-  padding-bottom: 3.75em;
-  display: flex;
+#page4 {
+  height: 70vh;
+  width: 100%;
+  background-color: #EFEAE3;
+  padding: 10vw 2vw;
 }
 
-.featured_header2 {
-  font-size: 25px;
-  grid-column-gap: 0.5em;
-  grid-row-gap: 0.5em;
-  flex-direction: row;
-  align-items: center;
-  margin-top: 2em;
-  margin-left: 2em;
-  margin-right: 2em;
-  padding-bottom: 2.5em;
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  width: 30%;
+  border-left: 1px solid #aeadad;
+  padding: 0 2vw;
+}
+
+#page5 {
+  height: 100vh;
+  width: 100%;
+  /* background-color: #EFEAE3; */
+}
+
+#footer {
+  position: fixed;
+  height: 105vh;
+  width: 100%;
+  background-color: #000;
+  color: #fff;
+  z-index: 9;
+  bottom: 0;
   display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  padding: 1vw 3vw;
+}
+
+#footer h1 {
+  font-size: 23vw;
+}
+
+#footer-div {
+  height: 20vh;
+  width: 100%;
+  background-color: red;
+}
+
+#footer-bottom {
+  border-top: 1px solid #dadada;
+  height: 10vh;
+  width: 100%;
+}
+
+#full-scr {
+  height: 100vh;
+  width: 100%;
+  background-color: #00000070;
+  position: fixed;
+  z-index: 99;
+  top: -100%;
+  transition: all ease 0.5s;
+}
+
+#full-div1 {
+  height: 50%;
+  width: 100%;
+  background-color: #EFEAE3;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+
+}
+
+@media (max-width:600px) {
+
+  #page1 {
+      min-height: 100vh;
+      width: 100vw;
+      padding: 0 0vw;
+  }
+
+  nav {
+      padding: 8vw 5vw;
+      background-color: #EFEAE3;
+      /* padding: 0 5vw; */
+  }
+
+  nav img {
+      transition: all ease 0.2s;
+      height: 9vh;
+  }
+
+  #nav-part2 {
+      display: none;
+  }
+
+  nav h3 {
+      display: block;
+      padding: 3vw 5vw;
+      border: 1px solid #ababab;
+      border-radius: 50px;
+      font-size: 4vw;
+      font-weight: 200;
+      padding-left: 10vw;
+  }
+
+  #center {
+      height: 62vh;
+      width: 100%;
+      display: flex;
+      align-items: flex-end;
+      justify-content: space-between;
+      border-bottom: 1px solid #0000003c;
+      padding: 7vw 5vw;
+      padding-bottom: 10vw;
+      flex-direction: column-reverse;
+      position: relative;
+      z-index: 9;
+  }
+
+  #left h3 {
+      width: 80%;
+      font-size: 5.5vw;
+      line-height: 6vw;
+  }
+
+  #center h1 {
+      font-size: 17vw;
+      text-align: right;
+      line-height: 15vw;
+  }
+
+  #page1 video {
+      position: relative;
+      border-radius: 15px;
+      margin-top: 4vw;
+      height: 70vh;
+      object-fit: cover;
+      object-position: center;
+      width: 92%;
+      margin-left: 4%;
+  }
+
+  #page2 {
+      min-height: 100vh;
+      width: 100%;
+      background-color: #EFEAE3;
+      padding: 8vw 0;
+      position: relative;
+  }
+
+  #moving-text {
+      overflow-x: auto;
+      white-space: nowrap;
+  }
+
+  #moving-text::-webkit-scrollbar {
+      display: none;
+  }
+
+  .con {
+      white-space: nowrap;
+      display: inline-block;
+      animation-name: move;
+      animation-duration: 10s;
+      animation-timing-function: linear;
+      animation-iteration-count: infinite;
+  }
+
+  #moving-text h1 {
+      font-size: 15vw;
+      display: inline-block;
+  }
+  #page2-bottom {
+      height: 90vh;
+      width: 100%;
+      padding: 10vw 4vw;
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+      position: relative;
+      flex-direction: column;
+      z-index: 9;
+  }
+
+  #page2-bottom h1 {
+      font-size: 8.2vw;
+      width: 100%;
+      line-height: 9vw;
+  }
+
+  #bottom-part2 {
+      width: 70%;
+  }
+
+  #bottom-part2 img {
+      width: 100%;
+      border-radius: 10px;
+  }
+
+  #bottom-part2 p {
+      font-weight: 200;
+      margin-top: 2vw;
+      font-size: 3vw;
+  }
+}
+
+#loader{
+  height: 100%;
+  width: 100%;
+  background-color: #000;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  transition: all ease 0.7s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#loader h1{
+  font-size: 4vw;
+  color: transparent;
+  background: linear-gradient(to right,orange,orangered);
+  /*-webkit-background-clip: text;*/
+  position: absolute;
+  opacity: 0;
+  animation-name: load;
+  animation-duration: 1s;
+  animation-delay: 1s;
+  animation-timing-function: linear;
+}
+#loader h1:nth-child(2){
+  animation-delay: 2s;
+}
+#loader h1:nth-child(3){
+  animation-delay: 3s;
+}
+
+@keyframes load {
+  0%{
+      opacity: 0;
+  }
+  10%{
+      opacity: 1;
+  }
+  90%{
+      opacity: 1;
+  }
+  100%{
+      opacity: 0;
+  }
+}
+
+@media (max-width:600px) {
+  #loader h1{
+      font-size: 9vw;
+    
+  }
 }
