--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-  * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box; 
@@ -29,14 +29,14 @@ html,body{
   
 }
 
-#nav{
+nav {
+  padding: 2vw 4vw;
   width: 100%;
-  display:flex;
+  display: flex;
   align-items: center;
   position: relative;
-  z-index: 90;
+  z-index: 100;
   justify-content: space-between;
-  padding: 10px 35px;
 }
 #nav-2{
   display: flex;
@@ -290,7 +290,60 @@ nav h3 {
   top: 0;
 }
 
+#loader{
+  height: 100%;
+  width: 100%;
+  background-color: #000;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  transition: all ease 0.7s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+#loader h1{
+  font-size: 4vw;
+  color: transparent;
+  background: linear-gradient(to right,orange,orangered);
+  -webkit-background-clip: text;
+  background-clip: text;
+  position: absolute;
+  opacity: 0;
+  animation-name: load;
+  animation-duration: 1s;
+  animation-delay: 1s;
+  animation-timing-function: linear;
+}
+#loader h1:nth-child(2){
+  animation-delay: 2s;
+}
+#loader h1:nth-child(3){
+  animation-delay: 3s;
+}
+
+@keyframes load {
+  0%{
+      opacity: 0;
+  }
+  10%{
+      opacity: 1;
+  }
+  90%{
+      opacity: 1;
+  }
+  100%{
+      opacity: 0;
+  }
+}
+
+@media (max-width:600px) {
+  #loader h1{
+      font-size: 9vw;
+    
+  }
+}
 
 #fixed-image {
   height: 30vw;
@@ -324,11 +377,6 @@ nav h3 {
   padding: 0 2vw;
 }
 
-#page5 {
-  height: 100vh;
-  width: 100%;
-  /* background-color: #EFEAE3; */
-}
 
 #footer {
   position: fixed;
@@ -339,6 +387,7 @@ nav h3 {
   z-index: 9;
   bottom: 0;
   display: flex;
+  /* align-items: flex-end; */
   justify-content: flex-end;
   flex-direction: column;
   padding: 1vw 3vw;
@@ -379,83 +428,233 @@ nav h3 {
 
 }
 
+#full-scr {
+  height: 100vh;
+  width: 100%;
+  background-color: #00000070;
+  position: fixed;
+  z-index: 99;
+  top: -100%;
+  transition: all ease 0.5s;
+}
+
+#full-div1 {
+  height: 50%;
+  width: 100%;
+  background-color: #EFEAE3;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
 @media (max-width:600px) {
 
-  #page1 {
-      min-height: 100vh;
-      width: 100vw;
-      padding: 0 0vw;
+  #page1{
+    min-height: 100vw;
+    width: 100%;
+    background-color:#EEEEEA;
+    position: relative;
+    
   }
-
+  
   nav {
-      padding: 8vw 5vw;
-      background-color: #EFEAE3;
-      /* padding: 0 5vw; */
-  }
-
+    padding: 2vw 0vw;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 100;
+    justify-content: space-between;
+}
   nav img {
-      transition: all ease 0.2s;
-      height: 9vh;
+    transition: all ease 0.2s;
+    height: 9vh;
+}
+  #nav-2{
+    display: flex;
+    align-items: center;
+    gap: 2vw;
   }
-
-  #nav-part2 {
-      display: none;
+  #nav-2 h4 {
+    padding: 10px 20px;
+    border: 1px solid #0000003c;
+    border-radius: 50px;
+    font-weight: 500;
+    color: #000000bb;
+    transition: all ease 0.5s;
+    position: relative;
+    font-size: 18px;
+    overflow: hidden;
   }
-
+  #nav-2 h4::after{
+    content: "";
+    position:absolute;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    left: 0;
+    bottom: -100%;
+    border-radius: 50%;
+    transition: all ease 0.5s;
+  }
+  #nav-2 h4:hover::after{
+    bottom: 0;
+    border-radius: 0;
+  }
+  #nav-2 h4 a{
+    color: #000000bb;
+    text-decoration: none;
+    position: relative;
+    z-index: 9;
+  }
+  #nav-2 h4:hover a {
+    color: #EEEEEA;
+  }
+  
   nav h3 {
-      display: block;
-      padding: 3vw 5vw;
-      border: 1px solid #ababab;
-      border-radius: 50px;
-      font-size: 4vw;
-      font-weight: 200;
-      padding-left: 10vw;
+    display: none;
   }
-
   #center {
-      height: 62vh;
-      width: 100%;
-      display: flex;
-      align-items: flex-end;
-      justify-content: space-between;
-      border-bottom: 1px solid #0000003c;
-      padding: 7vw 5vw;
-      padding-bottom: 10vw;
-      flex-direction: column-reverse;
-      position: relative;
-      z-index: 9;
+    height: 62vh;
+        width: 100%;
+        /* background-color: orange; */
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between;
+        border-bottom: 1px solid #0000003c;
+        padding: 7vw 5vw;
+        padding-bottom: 10vw;
+        flex-direction: column-reverse;
+        position: relative;
+        z-index: 9;
   }
-
-  #left h3 {
-      width: 80%;
-      font-size: 5.5vw;
-      line-height: 6vw;
-  }
-
   #center h1 {
-      font-size: 17vw;
-      text-align: right;
-      line-height: 15vw;
+    font-size: 17vw;
+    text-align: right;
+    line-height: 15vw;
   }
-
-  #page1 video {
-      position: relative;
-      border-radius: 15px;
-      margin-top: 4vw;
-      height: 70vh;
-      object-fit: cover;
-      object-position: center;
-      width: 92%;
-      margin-left: 4%;
+  #right{
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+  }
+  .me{
+    transition: all ease 0.2s;
+    height: 9vh;
+  }
+  #hero-shape {
+      position: absolute;
+      width: 46vw;
+      top: 65vh;
+      z-index: 99;
+  }
+  
+  #hero-1 {
+      background-color: #FE320A;
+      height: 100%;
+      width: 100%;
+      border-top-left-radius: 50%;
+      border-bottom-left-radius: 50%;
+      filter: blur(10px);
+      position: absolute;
+  }
+  
+  #hero-2 {
+      background: linear-gradient(#FE320A, #fe3f0a);
+  
+      height: 30vw;
+      width: 30vw;
+      border-radius: 50%;
+      position: absolute;
+      animation-name: anime2;
+      animation-duration: 5s;
+      animation-timing-function: linear;
+      animation-iteration-count: infinite;
+      animation-direction: alternate;
+      filter: blur(25px);
+  }
+  
+  #hero-3 {
+      background: linear-gradient(#FE320A, #fe3f0a);
+      height: 30vw;
+      position: absolute;
+      width: 30vw;
+      border-radius: 50%;
+      filter: blur(25px);
+      animation-name: anime1;
+      animation-duration: 5s;
+      animation-timing-function: linear;
+      animation-iteration-count: infinite;
+      animation-direction: alternate;
+  }
+  
+  @keyframes anime1 {
+      from {
+          transform: translate(55%, -3%);
+      }
+  
+      to {
+          transform: translate(0%, 10%);
+      }
+  }
+  
+  @keyframes anime2 {
+      from {
+          transform: translate(5%, -5%);
+      }
+  
+      to {
+          transform: translate(-20%, 30%);
+      }
+  }
+  .con {
+    white-space: nowrap;
+    display: inline-block;
+    animation-name: move;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+  }
+  
+  #mvtext::-webkit-scrollbar {
+    display: none;
+  }
+  
+  #mvtext{
+    z-index: 10;
+    position:absolute;
+    white-space: nowrap;
+    overflow-x: auto;
+    max-width: 100%;
+  }
+  
+  #mvtext h1{
+    font-size: 7vw;
+    display: inline-block;
+  }
+  #icn{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: #FE320A;
+    display:inline-block;
+    margin: 2vw 2vw;
+  }
+  @keyframes move {
+    from {
+        transform: translateX(0);
+    }
+  
+    to {
+        transform: translateX(-100%);
+    }
   }
 
   #page2 {
-      min-height: 100vh;
-      width: 100%;
-      background-color: #EFEAE3;
-      padding: 8vw 0;
-      position: relative;
-  }
+    min-height: 100vh;
+    width: 100%;
+    background-color: #EFEAE3;
+    padding: 8vw 0;
+    position: relative;
+}
 
   #moving-text {
       overflow-x: auto;
@@ -477,11 +676,16 @@ nav h3 {
 
   #moving-text h1 {
       font-size: 15vw;
+      /* background-color: lightblue; */
       display: inline-block;
   }
+
+  
+
   #page2-bottom {
       height: 90vh;
       width: 100%;
+      /* background-color: aliceblue; */
       padding: 10vw 4vw;
       display: flex;
       align-items: flex-start;
@@ -499,6 +703,7 @@ nav h3 {
 
   #bottom-part2 {
       width: 70%;
+      /* background-color: aqua; */
   }
 
   #bottom-part2 img {
@@ -510,59 +715,5 @@ nav h3 {
       font-weight: 200;
       margin-top: 2vw;
       font-size: 3vw;
-  }
-}
-
-#loader{
-  height: 100%;
-  width: 100%;
-  background-color: #000;
-  position: fixed;
-  z-index: 999;
-  top: 0;
-  transition: all ease 0.7s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#loader h1{
-  font-size: 4vw;
-  color: transparent;
-  background: linear-gradient(to right,orange,orangered);
-  /*-webkit-background-clip: text;*/
-  position: absolute;
-  opacity: 0;
-  animation-name: load;
-  animation-duration: 1s;
-  animation-delay: 1s;
-  animation-timing-function: linear;
-}
-#loader h1:nth-child(2){
-  animation-delay: 2s;
-}
-#loader h1:nth-child(3){
-  animation-delay: 3s;
-}
-
-@keyframes load {
-  0%{
-      opacity: 0;
-  }
-  10%{
-      opacity: 1;
-  }
-  90%{
-      opacity: 1;
-  }
-  100%{
-      opacity: 0;
-  }
-}
-
-@media (max-width:600px) {
-  #loader h1{
-      font-size: 9vw;
-    
   }
 }
