--- a/style.css
+++ b/style.css
@@ -251,10 +251,52 @@ nav h3 {
   font-size: 1vw;
 }
 
+#pg2{
+  min-height: 70vh;
+  width: 100%;
+  background-color:#EEEEEA;
+  position: relative;
+  display: flex;
+  align-items: center;
+} 
+
+#lft {
+  height: 62vh;
+  width: 50%;
+  display: flex;
+  align-items:center;
+  justify-content: space-between;
+  border-bottom: 1px;
+  padding-bottom: 2.5vw;
+  padding: 0 2vw;
+}
+
+#rgt{
+  height: 62vh;
+  width: 50%;
+  display: flex;
+  align-items:center;
+  justify-content: space-between;
+  border-bottom: 1px;
+  padding-bottom: 2.5vw;
+  padding: 0 2vw;
+}
+.art{
+  margin-left: 100px;
+  height: 40vh;
+  width: 70vh;
+  display: flex;
+  align-items: center;
+}
+.skills{
+  
+  display: flex;
+  align-items: center;
+}
 #page3 {
   min-height: 100vh;
   width: 100%;
-  background-color: #EFEAE3;
+  background-color: #EEEEEA;
   padding: 4vw 0;
 }
 
@@ -290,7 +332,7 @@ nav h3 {
   top: 0;
 }
 
-#loader{
+/*#loader{
   height: 100%;
   width: 100%;
   background-color: #000;
@@ -343,12 +385,11 @@ nav h3 {
       font-size: 9vw;
     
   }
-}
+}*/
 
 #fixed-image {
   height: 30vw;
   width: 24vw;
-  /* background-color: red; */
   border-radius: 15px;
   position: fixed;
   z-index: 99;
@@ -366,18 +407,51 @@ nav h3 {
   padding: 10vw 2vw;
 }
 
-.swiper {
+#pg5{
+  min-height: 100vh;
   width: 100%;
-  height: 100%;
+  background-color:#EEEEEA;
+  position: relative;
+  display: flex;
+  align-items: flex-start;
 }
 
-.swiper-slide {
-  width: 30%;
-  border-left: 1px solid #aeadad;
+#lft5 {
+  height: 62vh;
+  width: 50%;
+  display: flex;
+  align-items:center;
+  justify-content: space-between;
+  border-bottom: 1px;
+  padding-bottom: 2.5vw;
   padding: 0 2vw;
 }
 
+#rgt5{
+  height: 62vh;
+  width: 50%;
+  
+}
+.contact{
+  margin-top: 50px;
+  margin-left: 50px;
+  height: 85vh;
+  width: 90vh;
+  display: flex;
+  align-items: flex-start;
+}
 
+#cnt{
+  font-size: 80px;
+}
+
+#pcnt{
+  font-size: 30px;
+}
+
+#email{
+  font-size: 30px;
+}
 #footer {
   position: fixed;
   height: 105vh;
@@ -456,7 +530,7 @@ nav h3 {
   }
   
   nav {
-    padding: 2vw 0vw;
+    padding: 2vw 4vw;
     width: 100%;
     display: flex;
     align-items: center;
@@ -481,7 +555,7 @@ nav h3 {
     color: #000000bb;
     transition: all ease 0.5s;
     position: relative;
-    font-size: 18px;
+    font-size: 10px;
     overflow: hidden;
   }
   #nav-2 h4::after{
@@ -515,7 +589,6 @@ nav h3 {
   #center {
     height: 62vh;
         width: 100%;
-        /* background-color: orange; */
         display: flex;
         align-items: flex-end;
         justify-content: space-between;
@@ -528,22 +601,22 @@ nav h3 {
   }
   #center h1 {
     font-size: 17vw;
-    text-align: right;
+    text-align: center;
     line-height: 15vw;
   }
   #right{
     display: flex;
     align-items: center;
-    padding: 10px 20px;
+    padding: 10px 55px;
   }
   .me{
     transition: all ease 0.2s;
-    height: 9vh;
+    height: 40vh;
   }
   #hero-shape {
       position: absolute;
-      width: 46vw;
-      top: 65vh;
+      width: 86vw;
+      top: 45vh;
       z-index: 99;
   }
   
@@ -631,12 +704,12 @@ nav h3 {
     display: inline-block;
   }
   #icn{
-    height: 20px;
-    width: 20px;
+    height: 10px;
+    width: 10px;
     border-radius: 50%;
     background-color: #FE320A;
     display:inline-block;
-    margin: 2vw 2vw;
+    margin: 1vw 2vw;
   }
   @keyframes move {
     from {
@@ -649,9 +722,9 @@ nav h3 {
   }
 
   #page2 {
-    min-height: 100vh;
+    min-height: 5vh;
     width: 100%;
-    background-color: #EFEAE3;
+    background-color: #EEEEEA;
     padding: 8vw 0;
     position: relative;
 }
@@ -676,19 +749,17 @@ nav h3 {
 
   #moving-text h1 {
       font-size: 15vw;
-      /* background-color: lightblue; */
       display: inline-block;
   }
 
   
 
   #page2-bottom {
-      height: 90vh;
+      height: 60vh;
       width: 100%;
-      /* background-color: aliceblue; */
       padding: 10vw 4vw;
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       justify-content: space-between;
       position: relative;
       flex-direction: column;
@@ -696,14 +767,13 @@ nav h3 {
   }
 
   #page2-bottom h1 {
-      font-size: 8.2vw;
+      font-size: 4vw;
       width: 100%;
-      line-height: 9vw;
+      line-height: 4vw;
   }
 
   #bottom-part2 {
       width: 70%;
-      /* background-color: aqua; */
   }
 
   #bottom-part2 img {
@@ -715,5 +785,124 @@ nav h3 {
       font-weight: 200;
       margin-top: 2vw;
       font-size: 3vw;
+  }
+
+  #pg2{
+    min-height: 60vh;
+    width: 100%;
+    background-color:#EEEEEA;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+  } 
+  
+  #lft {
+    height: 2vh;
+    width: 50%;
+    justify-content: space-between;
+    border-bottom: 1px;
+    padding-bottom: 2.5vw;
+    padding: 0 2vw;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  
+  #rgt{
+    height: 22vh;
+    width: 50%;
+    justify-content: space-between;
+    border-bottom: 1px;
+    padding-bottom: 2.5vw;
+    padding: 0 2vw;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .art{
+    margin-top: 50px;
+    margin-left: 10px;
+    height: 40vh;
+    width: 35vh;
+  }
+  .skills{
+    margin-top: 250px;
+    height: 40vh;
+    width: 35vh;
+  }
+  .elem {
+    height: 80px;
+    width: 100%;
+    position: relative;
+  
+    border-bottom: 1px solid #38383864;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    padding: 0 2vw;
+  }
+  
+  .elem h2 {
+    font-size: 6vw;
+    position: relative;
+    z-index: 9;
+  }
+  
+  .elem .overlay {
+    height: 100%;
+    width: 100%;
+    background-color: orange;
+    position: absolute;
+    left: 0;
+    top: -100%;
+    transition: all ease 0.25s;
+  }
+  
+  .elem:hover .overlay {
+    top: 0;
+  }
+
+  #fixed-image {
+    height: 60vw;
+    width: 48vw;
+    border-radius: 15px;
+    position: fixed;
+    z-index: 99;
+    left: 25%;
+    top: 5%;
+    display: none;
+    background-size: cover;
+    background-position: center;
+  }
+  
+  #page4 {
+    height: 70vh;
+    width: 100%;
+    background-color: #EFEAE3;
+    padding: 10vw 2vw;
+  }
+
+  #pg5{
+    min-height: 60vh;
+    width: 100%;
+    background-color:#EEEEEA;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  .contact{
+    height: 45vh;
+    width: 45vh;
+  }
+  
+  #cnt{
+    font-size: 30px;
+  }
+  
+  #pcnt{
+    font-size: 15px;
+  }
+  
+  #email{
+    font-size: 15px;
   }
 }
