--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -40,7 +41,7 @@ html,body{
 }
 
 nav {
-  padding: 2vw 4vw;
+  padding: 0vw 4vw;
   width: 100%;
   display: flex;
   align-items: center;
@@ -107,18 +108,19 @@ nav h3 {
   line-height: 7vw;
 }
 .auto-type{
-  font-size: 6vw;
+  font-size: 5vw;
+ 
 }
 .hi{
-  font-size: 6vw;
+  margin-top: 1vw;
+  font-size: 3vw;
 }
 .name{
-  font-size: 8vw;
+  font-size: 7vw;
 }
 #right{
-  display: flex;
-  align-items: center;
-  padding: 10px 20px;
+  padding: 0px 20px;
+  margin-right: 20px;
 }
 #ricn{
   z-index: 110;
@@ -128,7 +130,7 @@ a{
 }
 }
 .me{
-  border-radius: 6%;
+  border-radius: 4%;
   display: flex;
   align-items: center;
   max-height: 550px;
@@ -211,6 +213,7 @@ a{
 }
 
 #mvtext{
+  margin-top: 1vw;
   z-index: 10;
   position:absolute;
   white-space: nowrap;
@@ -229,6 +232,15 @@ a{
   background-color: #FE320A;
   display:inline-block;
   margin: 1vw 2vw;
+}
+#icn2{
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  background-color: #FE320A;
+  display:inline-block;
+  margin: 2vw 2vw;
+  z-index: 999;
 }
 @keyframes move {
   from {
@@ -286,14 +298,8 @@ a{
 } 
 
 #lft {
-  height: 62vh;
+  margin-top: 6%;
   width: 50%;
-  display: flex;
-  align-items:center;
-  justify-content: space-between;
-  border-bottom: 1px;
-  padding-bottom: 2.5vw;
-  padding: 0 2vw;
 }
 
 #rgt{
@@ -324,7 +330,13 @@ a{
   background-color: #EEEEEA;
   padding: 4vw 0;
 }
-
+#hd{
+  display: flex;
+}
+#pj{
+  font-size: 50px;
+  margin: 1vw 0vw
+}
 .elem {
   height: 150px;
   width: 100%;
@@ -432,7 +444,78 @@ a{
   padding: 10vw 2vw;
 }
 
-#pg5{
+
+#pg5 {
+    font-family: 'Poppins', sans-serif;
+    background-color: #EEEEEA;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
+.container {
+    text-align: center;
+    max-width: 80%;
+    padding: 20px;
+    color: #000;
+}
+
+#contact{
+    font-size: 80px;
+    margin-bottom: 150px;
+    
+}
+
+#contact1{
+  font-size: 40px;
+  margin-bottom: 100px;
+}
+
+.contact-details {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.contact-item {
+  justify-content: space-between;
+    margin-left: 100px;
+    margin-right: 130px;
+}
+.contact-item2{
+  margin: 0px 50px 0px 100px;
+}
+.contact-item3{
+  margin: 0px 100px 0px 100px;
+}
+.contact-item1{
+  margin-right: 50px;
+}
+
+
+.question-link {
+  margin-top: 50px;
+    display: inline-block;
+    background-color: #ffd700;
+    color: #000;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+
+.question-link:hover {
+    background-color: #ffc107;
+}
+
+.question-link span {
+    font-weight: normal;
+}
+#pg6{
   min-height: 100vh;
   width: 100%;
   background-color:#EEEEEA;
@@ -586,7 +669,7 @@ a{
     height: 62vh;
         width: 100%;
         display: flex;
-        align-items: flex-end;
+        align-items: center;
         justify-content: space-between;
         border-bottom: 1px;
         padding: 7vw 5vw;
@@ -615,7 +698,12 @@ a{
       top: 45vh;
       z-index: 99;
   }
-  
+  #hero-shape1 {
+    position: absolute;
+    width: 56vw;
+    top: 45vh;
+    z-index: 99;
+}
   #hero-1 {
       background-color: #FE320A;
       height: 100%;
@@ -706,6 +794,23 @@ a{
     background-color: #FE320A;
     display:inline-block;
     margin: 1vw 2vw;
+    z-index: 99;
+  }
+  #icn2{
+    height: 5px;
+    width: 5px;
+    border-radius: 50%;
+    background-color: #FE320A;
+    display:inline-block;
+    margin: 1vw 2vw;
+    z-index: 999;
+  }
+  #hd{
+    display: flex;
+  }
+  #pj{
+    font-size: 50px;
+    margin-top: 13px;
   }
   @keyframes move {
     from {
