--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ nav h3 {
 }
 .auto-type{
   font-size: 5vw;
+  
  
 }
 .hi{
@@ -134,6 +135,7 @@ a{
   display: flex;
   align-items: center;
   max-height: 550px;
+  margin-left: 7%;
 }
 #hero-shape {
     position: absolute;
@@ -601,7 +603,7 @@ a{
 @media (max-width:600px) {
 
   #page1{
-    min-height: 100vw;
+    min-height: 220vw;
     width: 100%;
     background-color:#EEEEEA;
     position: relative;
@@ -666,10 +668,9 @@ a{
     display: none;
   }
   #center {
-    height: 62vh;
+    height: 55vh;
         width: 100%;
         display: flex;
-        align-items: center;
         justify-content: space-between;
         border-bottom: 1px;
         padding: 7vw 5vw;
@@ -682,15 +683,22 @@ a{
     font-size: 17vw;
     text-align: center;
     line-height: 15vw;
+    margin-left: 1vw;
   }
   #right{
     display: flex;
     align-items: center;
     padding: 10px 55px;
   }
+  .auto-type{
+    font-size: 5.5vw;
+    padding-left: 30vw;
+
+  }
   .me{
     transition: all ease 0.2s;
     height: 40vh;
+    margin-left: 5vw;
   }
   #hero-shape {
       position: absolute;
@@ -713,7 +721,13 @@ a{
       filter: blur(10px);
       position: absolute;
   }
-  
+  #ricn{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 50%;
+    
+  }
   #hero-2 {
       background: linear-gradient(#FE320A, #fe3f0a);
   
@@ -781,6 +795,7 @@ a{
     white-space: nowrap;
     overflow-x: auto;
     max-width: 100%;
+    margin-top: 27vh;
   }
   
   #mvtext h1{
@@ -899,13 +914,14 @@ a{
   
   #lft {
     height: 2vh;
-    width: 50%;
+    width: 100%;
     justify-content: space-between;
     border-bottom: 1px;
     padding-bottom: 2.5vw;
     padding: 0 2vw;
     flex-direction: column;
     flex-wrap: nowrap;
+    z-index: 999;
   }
   
   #rgt{
