--- a/style.css
+++ b/style.css
@@ -19,13 +19,13 @@ html,body{
   position: absolute;
   z-index: 99999;
   border-radius: 50%;
-  background-color: purple;
+  background-color: #6C63FF;
 }
 
 #main {
   position: relative;
 
-  background-color:#EEEEEA;
+  background-color:#F0EFFF;
   overflow-x: auto;
   max-width: 100%;
   }
@@ -37,7 +37,7 @@ html,body{
 #page1{
   min-height: 100vh;
   width: 100%;
-  background-color:#EEEEEA;
+  background-color:#F0EFFF;
   position: relative;
   
 }
@@ -89,7 +89,7 @@ nav {
   z-index: 9;
 }
 #nav-2 h4:hover a {
-  color: #EEEEEA;
+  color: #F0EFFF;
 }
 
 nav h3 {
@@ -146,7 +146,7 @@ a{
 }
 
 #hero-1 {
-    background-color: #FE320A;
+    background-color: #6C63FF;
     height: 100%;
     width: 100%;
     border-top-left-radius: 50%;
@@ -156,7 +156,7 @@ a{
 }
 
 #hero-2 {
-    background: linear-gradient(#FE320A, #fe3f0a);
+    background: linear-gradient(#6C63FF, #D7D4FF);
 
     height: 30vw;
     width: 30vw;
@@ -171,7 +171,7 @@ a{
 }
 
 #hero-3 {
-    background: linear-gradient(#FE320A, #fe3f0a);
+    background: linear-gradient(#6C63FF, #D7D4FF);
     height: 30vw;
     position: absolute;
     width: 30vw;
@@ -233,7 +233,7 @@ a{
   height: 50px;
   width: 50px;
   border-radius: 50%;
-  background-color: #FE320A;
+  background-color: #4169E1;
   display:inline-block;
   margin: 1vw 2vw;
 }
@@ -241,7 +241,7 @@ a{
   height: 25px;
   width: 25px;
   border-radius: 50%;
-  background-color: #FE320A;
+  background-color: #4169E1;
   display:inline-block;
   margin: 2vw 2vw;
   z-index: 999;
@@ -291,7 +291,7 @@ a{
 #pg2{
   min-height: 90vh;
   width: 100%;
-  background-color:#EEEEEA;
+  background-color:#F0EFFF;
   position: relative;
   display: flex;
   align-items: center;
@@ -350,7 +350,7 @@ a{
 #page3 {
   min-height: 100vh;
   width: 100%;
-  background-color: #EEEEEA;
+  background-color: #F0EFFF;
   padding: 4vw 0;
 }
 #hd{
@@ -471,7 +471,7 @@ a{
 
 #pg5 {
     font-family: 'Poppins', sans-serif;
-    background-color: #EEEEEA;
+    background-color: #F0EFFF;
     color: #fff;
     display: flex;
     justify-content: center;
@@ -523,7 +523,7 @@ a{
 .question-link {
   margin-top: 50px;
     display: inline-block;
-    background-color: #ffd700;
+    background-color: #6C63FF;
     color: #000;
     text-decoration: none;
     padding: 10px 20px;
@@ -533,7 +533,7 @@ a{
 }
 
 .question-link:hover {
-    background-color: #ffc107;
+    background-color: #6C63FF;
 }
 
 .question-link span {
@@ -542,7 +542,7 @@ a{
 #pg6{
   min-height: 100vh;
   width: 100%;
-  background-color:#EEEEEA;
+  background-color:#F0EFFF;
   position: relative;
   display: flex;
   align-items: flex-start;
@@ -627,7 +627,7 @@ a{
   #page1{
     min-height: 220vw;
     width: 100%;
-    background-color:#EEEEEA;
+    background-color:#F0EFFF;
     position: relative;
     
   }
@@ -683,7 +683,7 @@ a{
     z-index: 9;
   }
   #nav-2 h4:hover a {
-    color: #EEEEEA;
+    color: #F0EFFF;
   }
   
   nav h3 {
@@ -735,7 +735,7 @@ a{
     z-index: 99;
 }
   #hero-1 {
-      background-color: #FE320A;
+      background-color: #6C63FF;
       height: 100%;
       width: 100%;
       border-top-left-radius: 50%;
@@ -751,7 +751,7 @@ a{
     
   }
   #hero-2 {
-      background: linear-gradient(#FE320A, #fe3f0a);
+      background: linear-gradient(#6C63FF, #D7D4FF);
   
       height: 30vw;
       width: 30vw;
@@ -766,7 +766,7 @@ a{
   }
   
   #hero-3 {
-      background: linear-gradient(#FE320A, #fe3f0a);
+      background: linear-gradient(#6C63FF, #D7D4FF);
       height: 30vw;
       position: absolute;
       width: 30vw;
@@ -828,25 +828,26 @@ a{
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    background-color: #FE320A;
+    background-color: #6C63FF;
     display:inline-block;
     margin: 1vw 2vw;
     z-index: 99;
   }
   #icn2{
-    height: 5px;
-    width: 5px;
+    height: 20px;
+    width: 20px;
     border-radius: 50%;
-    background-color: #FE320A;
+    background-color: #6C63FF;
     display:inline-block;
     margin: 1vw 2vw;
     z-index: 999;
   }
   #hd{
     display: flex;
+    align-items: center;
   }
   #pj{
-    font-size: 50px;
+    font-size: 40px;
     margin-top: 13px;
   }
   @keyframes move {
@@ -862,7 +863,7 @@ a{
   #page2 {
     min-height: 5vh;
     width: 100%;
-    background-color: #EEEEEA;
+    background-color: #F0EFFF;
     padding: 8vw 0;
     position: relative;
 }
@@ -923,9 +924,9 @@ a{
   }
 
   #pg2{
-    min-height: 70vh;
+    min-height: 130vh;
     width: 100%;
-    background-color:#EEEEEA;
+    background-color:#F0EFFF;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -955,14 +956,29 @@ a{
     flex-wrap: nowrap;
   }
   .art{
-    width: 100%;
+    width: 200%;
     height: auto;
     margin-left: 0px;
+  }
+  #sicn{
+    display: flex;
+    height: auto;
+    margin-left: 9vh;
+  }
+  #sec1{
+    width: 50%;
+    flex-direction: column;
+  }
+  #sec2{
+    width: 50%;
+    flex-direction: column;
+    margin-bottom: 60px;
   }
   .skills{
     margin-top: 250px;
     width: 100%;
     height: auto;
+    margin-top: 40vh;
   }
   .elem {
     height: 80px;
@@ -985,7 +1001,7 @@ a{
   .elem .overlay {
     height: 100%;
     width: 100%;
-    background-color: orange;
+    background-color: #6C63FF;
     position: absolute;
     left: 0;
     top: -100%;
@@ -1009,7 +1025,8 @@ a{
     background-position: center;
   }
   #page3{
-    min-height: 60vh;
+    min-height: 80vh;
+    margin-top: 40vw;
   }
   #page4 {
     height: 70vh;
@@ -1020,7 +1037,7 @@ a{
 
   #pg5 {
     font-family: 'Poppins', sans-serif;
-    background-color: #EEEEEA;
+    background-color: #F0EFFF;
     color: #fff;
     display: flex;
     justify-content: center;
@@ -1075,7 +1092,7 @@ a{
 .question-link {
   margin-top: 50px;
     display: inline-block;
-    background-color: #ffd700;
+    background-color: #6C63FF;
     color: #000;
     text-decoration: none;
     padding: 10px 20px;
@@ -1085,7 +1102,7 @@ a{
 }
 
 .question-link:hover {
-    background-color: #ffc107;
+    background-color: #6C63FF;
 }
 
 .question-link span {
@@ -1094,7 +1111,7 @@ a{
 #pg6{
   min-height: 100vh;
   width: 100%;
-  background-color:#EEEEEA;
+  background-color:#F0EFFF;
   position: relative;
   display: flex;
   align-items: flex-start;
