--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ nav h3 {
 }
 #center h1 {
   text-align: left;
-  line-height: 7vw;
+  line-height: 6vw;
 }
 .auto-type{
   font-size: 5vw;
@@ -151,7 +151,7 @@ a{
   border-radius: 4%;
   display: flex;
   align-items: center;
-  max-height: 550px;
+  max-height: 70vh;
   margin-left: 7%;
 }
 #hero-shape {
@@ -232,7 +232,7 @@ a{
 }
 
 #mvtext{
-  margin-top: 1vw;
+  margin-top: 3vw;
   z-index: 10;
   position:absolute;
   white-space: nowrap;
@@ -286,7 +286,10 @@ a{
   position: relative;
   z-index: 999;
 }
-
+#man{
+  width: 50%;
+    height: auto;
+}
 #page2-bottom h1 {
   font-size: 2vw;
   line-height: 2vw;
@@ -313,8 +316,9 @@ a{
 } 
 
 #lft {
-  margin-top: 6%;
-  width: 50%;
+  margin-top: 9vh;
+  width: 45%;
+  z-index: 99;
 }
 
 #rgt{
@@ -328,7 +332,7 @@ a{
   padding: 0 2vw;
 }
 .art{
-  margin-left: 100px;
+  margin-left: 75px;
   height: 50vh;
   width: 80vh;
   display: flex;
@@ -336,7 +340,7 @@ a{
 }
 .skills{
  font-size: 3vh;
- padding-left: 2vw;
+ padding-left: 4vw;
  margin-bottom: 15vh;
 }
 #sicn{
@@ -485,7 +489,7 @@ a{
 
 
 #pg5 {
-    font-family: 'Poppins', sans-serif;
+    
     background-color: #F0EFFF;
     color: #fff;
     display: flex;
@@ -504,7 +508,7 @@ a{
 
 #contact{
     font-size: 80px;
-    margin-bottom: 150px;
+    margin-bottom: 60px;
     
 }
 
@@ -516,27 +520,26 @@ a{
 .contact-details {
     display: flex;
     justify-content: center;
-    margin-bottom: 30px;
 }
 
 .contact-item {
   justify-content: space-between;
     margin-left: 100px;
-    margin-right: 130px;
+    margin-right: 10px;
 }
 .contact-item2{
-  margin: 0px 50px 0px 100px;
+  margin: 0px 50px 0px 0px;
 }
 .contact-item3{
-  margin: 0px 100px 0px 100px;
+  margin: 0px 80px 0px 100px;
 }
 .contact-item1{
-  margin-right: 50px;
+  margin-right: 0px;
 }
 
 
 .question-link {
-  margin-top: 50px;
+    margin-top: 5vh;
     display: inline-block;
     background-color: #6C63FF;
     color: #000;
@@ -670,7 +673,7 @@ a{
     border: 1px solid #0000003c;
     border-radius: 50px;
     font-weight: 500;
-    color: #000000bb;
+    
     transition: all ease 0.5s;
     position: relative;
     font-size: 10px;
@@ -681,7 +684,7 @@ a{
     position:absolute;
     height: 100%;
     width: 100%;
-    background-color: black;
+    
     left: 0;
     bottom: -100%;
     border-radius: 50%;
@@ -692,7 +695,7 @@ a{
     border-radius: 0;
   }
   #nav-2 h4 a{
-    color: #000000bb;
+    
     text-decoration: none;
     position: relative;
     z-index: 9;
