--- a/blog/style.css
+++ b/blog/style.css
@@ -1,243 +1,313 @@
 @font-face {
-    font-family: chacha;
-    src: url(./64eda5e5fdd71ddd3dbbf609_apercu-regular.woff2);
+  font-family: chacha;
+  src: url(./64eda5e5fdd71ddd3dbbf609_apercu-regular.woff2);
 }
 
 @font-face {
-    font-family: chachi;
-    src: url(./64eda5e581cb8e58ed55dea5_apercu-medium.woff2);
+  font-family: chachi;
+  src: url(./64eda5e581cb8e58ed55dea5_apercu-medium.woff2);
 }
 
 @font-face {
-    font-family: chacha2;
-    src: url(./6479b994523a6279a03d4da7_Siaga-Bold.woff2);
+  font-family: chacha2;
+  src: url(./6479b994523a6279a03d4da7_Siaga-Bold.woff2);
 }
 
 @font-face {
-    font-family: larken;
-    src: url(./LarkenDEMO-Bold.otf);
+  font-family: larken;
+  src: url(./LarkenDEMO-Bold.otf);
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: chacha;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: chacha;
 }
-html,body{
-    height: 100%;
-    width: 100%;
-}
-
-body{
-    background-color: #E4E4E4;
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
 
-#main{
-    padding-top: 8vh;
-}
-nav{
-    display: flex;
-    align-items:center ;
-    justify-content: space-between;
-    padding: 20px 50px;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 99;
-    background-color: #E4E4E4;
+body {
+  background-color: #f0efff;
 }
 
-.part3{
-    display: flex;
-    gap: 20px;
+#main {
+  padding-top: 8vh;
+}
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 50px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 99;
+  background-color: #f0efff;
 }
 
-.part3 h4{
-    padding: 7px 15px;
-    border: 1px solid #000;
-    font-size: 18px;
-    border-radius: 7px;
-    cursor: pointer;
-    transition: all ease 0.3s;
+.part3 {
+  display: flex;
+  gap: 20px;
 }
 
-.part3 h4:hover{
-    background-color: #000;
-    color: #fff;
+.part3 h4 {
+  padding: 7px 15px;
+  border: 1px solid #000;
+  font-size: 18px;
+  border-radius: 7px;
+  cursor: pointer;
+  transition: all ease 0.3s;
 }
 
-#n{
+.part3 h4:hover {
+  background-color: #000;
+  color: #fff;
+}
 
-    animation-name: rotate;
-    animation-duration: 6s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
+#n {
+  animation-name: rotate;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 
 @keyframes rotate {
-    100%{
-        rotate: 360deg;
-    }
+  100% {
+    rotate: 360deg;
+  }
 }
 
-
-.hero-section{
-    display: flex;
-    align-items: flex-end;
-    margin-top: 50px;
-    padding: 20px 50px;
-    justify-content: space-between;
-
+.hero-section {
+  display: flex;
+  align-items: flex-end;
+  margin-top: 50px;
+  padding: 20px 50px;
+  justify-content: space-between;
 }
 
-.hero-section h1{
-    font-size: 100px;
-    font-family: larken;
-    line-height: 1;
+.hero-section h1 {
+  font-size: 100px;
+  font-family: larken;
+  line-height: 1;
 }
 
-.hero-2{
-    width: 23%;
+.hero-2 {
+  width: 23%;
 }
-.hero-2 p{
-    font-size: 20px;
-}
-
-.hero-2 button{
-    background-color: #fff;
-    color: #000;
-    padding: 12px 25px;
-    font-size: 16px;
-    margin-top: 40px;
-    margin-bottom: 20px;
-    border: none;
-    border-radius: 5px;
+.hero-2 p {
+  font-size: 20px;
 }
 
-.image-section{
-    display: flex;
-    gap: 30px;
-    padding: 40px 0;
-    transform: translateX(-20%);
+.hero-2 button {
+  background-color: #fff;
+  color: #000;
+  padding: 12px 25px;
+  font-size: 16px;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  border: none;
+  border-radius: 5px;
 }
 
-.image-section img{
-    height:650px;
-    width: 450px;
-    object-fit: cover;
-    border-radius: 120px;
+.image-section {
+  display: flex;
+  gap: 30px;
+  padding: 40px 0;
+  transform: translateX(-20%);
 }
 
-.section2{
-    margin-top: 5vh;
-    min-height: 100vh;
-    padding: 40px 60px;
-}
-.section2-para{
-    margin-bottom: 15vh;
-
-}
-.section2-para p{
-    font-size: 26px;
-    line-height: 1.4;
+.image-section img {
+  height: 650px;
+  width: 450px;
+  object-fit: cover;
+  border-radius: 25px;
 }
 
-
-.section2 h1{
-    font-size: 9.5vw;
-    text-transform: uppercase;
-    font-family: chacha2;
-    line-height: 1;
-    text-align: center;
-    position: relative;
+.section2 {
+  margin-top: 5vh;
+  min-height: 100vh;
+  padding: 40px 60px;
+}
+.section2-para {
+  margin-bottom: 15vh;
+}
+.section2-para p {
+  font-size: 26px;
+  line-height: 1.4;
 }
 
-.section2 h1::after{
-    content: "Gotta see 'm all";
-    font-family: chacha;
-    background-color: #F4C728;
-    font-size: 17px;
-    text-transform: none;
-    padding: 25px 30px;
-    border-radius: 30px;
-    position: absolute;
-    bottom: -8%;
-    right: 25%;
-    rotate: -10deg;
+.section2 h1 {
+  font-size: 9.5vw;
+  text-transform: uppercase;
+  font-family: chacha2;
+  line-height: 1;
+  text-align: center;
+  position: relative;
 }
 
-.section2-image-container{
-    margin-top: 10vh;
-    width: 100%;
-    height: 65vh;
-    border-radius: 30px;
-    background-image: url(https://cdn.prod.website-files.com/648884be5f32a12e5da2392f/65492b562e62e676d4159713_NS_Wayfinding%20_%20NaN-p-2600.jpg);
-    background-size: 100%;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all ease 0.7s;
+.section2 h1::after {
+  content: "Gotta see 'm all";
+  font-family: chacha;
+  background-color: #f4c728;
+  font-size: 17px;
+  text-transform: none;
+  padding: 25px 30px;
+  border-radius: 30px;
+  position: absolute;
+  bottom: -8%;
+  right: 25%;
+  rotate: -10deg;
 }
 
-.section2-image-container img{
-    height: 65%;
-    opacity: 0;
-    transition: all ease 0.7s;
-    border-radius: 0;
+.section2-image-container {
+  margin-top: 10vh;
+  width: 100%;
+  height: 65vh;
+  border-radius: 30px;
+  background-image: url("./images/evidhi2.png");
+  background-size: 100%;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all ease 0.7s;
 }
 
-.section2-image-container:hover{
-    border-radius: 120px;
-    background-size: 110%;
+.section2-image-container img {
+  height: 65%;
+  opacity: 0;
+  transition: all ease 0.7s;
+  border-radius: 0;
 }
 
-.section2-image-container:hover img{
-    opacity: 1;
-    border-radius: 70px;
-
+.section2-image-container:hover {
+  border-radius: 10px;
+  background-size: 110%;
 }
 
-.section3{
-    height: 100vh;
-    width: 100%;
-    padding: 60px;
-    display: flex;
-    gap: 30px;
+.section2-image-container:hover img {
+  opacity: 1;
+  border-radius: 20px;
 }
 
-.card{
-    height: 500px;
-    width: 380px;
+.section3 {
+  height: 100vh;
+  width: 100%;
+  padding: 60px;
+  display: flex;
+  gap: 30px;
 }
 
-.card .card1{
-    height: 60%;
-    width: 100%;
-    transition: all ease 0.5s;
-    border-radius: 0px;
-    overflow: hidden;
+.card {
+  height: 500px;
+  width: 380px;
 }
 
-.card .card1 img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+.card .card1 {
+  height: 60%;
+  width: 100%;
+  transition: all ease 0.5s;
+  border-radius: 0px;
+  overflow: hidden;
 }
 
-.card .card2{
-    height: 40%;
-    width: 100%;
-    border-radius: 0px;
-    background-color: #AA81B7;
-    transition: all ease 0.5s;
-
+.card .card1 img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
-.card:hover .card1{
-    border-radius: 80px;
+.card .card2 {
+  height: 40%;
+  width: 100%;
+  border-radius: 0px;
+  background-color: #aa81b7;
+  transition: all ease 0.5s;
 }
-.card:hover .card2{
-    border-radius: 80px;
+
+.card:hover .card1 {
+  border-radius: 80px;
+}
+.card:hover .card2 {
+  border-radius: 80px;
+}
+
+#pg5 {
+  background-color: #f0efff;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+.container {
+  text-align: center;
+  max-width: 80%;
+  padding: 20px;
+  color: #000;
+}
+
+#contact {
+  font-size: 80px;
+  margin-bottom: 60px;
+}
+
+#contact1 {
+  font-size: 40px;
+  margin-bottom: 100px;
+}
+
+.contact-details {
+  display: flex;
+  justify-content: center;
+}
+
+.contact-item {
+  justify-content: space-between;
+  margin-left: 100px;
+  margin-right: 10px;
+}
+.contact-item2 {
+  margin: 0px 50px 0px 0px;
+}
+.contact-item3 {
+  margin: 0px 80px 0px 100px;
+}
+.contact-item1 {
+  margin-right: 0px;
+}
+
+.question-link {
+  margin-top: 5vh;
+  display: inline-block;
+  background-color: #6c63ff;
+  color: #000;
+  text-decoration: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.question-link:hover {
+  background-color: #6c63ff;
+}
+
+.question-link span {
+  font-weight: normal;
+}
+
+#pg6 {
+  min-height: 4vw;
+  width: 100%;
+  background-color: #f0efff;
+  position: relative;
+  display: flex;
+  justify-content: center;
 }
